# gs1-digital-link-resolver

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SIGNING.md  pyproject.toml  signing-key.asc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: routes.example.yaml
docs/: ARCHITECTURE.md  deployment.md  stability.md
profiles/: README.md  illustrative-dpp.schema.json
resolver/: __init__.py  ai_table.py  app.py  linkset.py  logging_config.py  metrics.py  negotiate.py  parser.py  router.py  validator.py
tests/: test_app_integration.py  test_conformance.py  test_linkset.py  test_logging.py  test_parser.py  test_router.py  test_validator.py
