[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gs1-digital-link-resolver"
version = "0.2.1"
description = "Open GS1 Digital Link Resolver for EU Digital Product Passports"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["gs1", "digital-link", "dpp", "espr", "supply-chain", "resolver"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff==0.6.9"]

[project.urls]
Homepage = "https://github.com/grigolatoe/gs1-digital-link-resolver"
"Bug Tracker" = "https://github.com/grigolatoe/gs1-digital-link-resolver/issues"

[tool.setuptools.packages.find]
include = ["resolver*"]
exclude = ["config*", "tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
